# persona-flow

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml  run_mock_service.py
agent-runner-service/: Dockerfile  api_server.py  main.py  pyproject.toml  server.py
agent-runner-service/app/: agent.py  agent_starter_hackathon.py  architect.py  clients.py  orchestrator.py  personas.py  toolbelt.py
agent-runner-service/tests/: test_architect.py  test_json_parsing.py  test_llm_client.py  test_persona_flow.py  test_toolbelt_integration.py
llm-service/: Dockerfile  deploy-gemma-llm.sh  pyproject.toml  server.py
llm-service/app/: __init__.py  llm.py
mock-api-service/: .dockerignore  Dockerfile  deploy-mock-api.sh  pyproject.toml  server.py
mock-api-service/app/: __init__.py  api.py
mock-api-service/mock-ui/: index.html
mock-api-service/tests/: test_advanced_flaws.py  test_app.py
ollama-backend/: Dockerfile
orchestrator-service/: pyproject.toml  server.py
src/: __init__.py
src/mock_service/: __init__.py
tests/mock_service/: test_advanced_flaws.py  test_app.py
ui/app/: layout.tsx  page.tsx
